--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
+    "vue-slicksort": "^2.0.0-alpha.4",
     "vue-template-compiler": "^2.6.12",
     "vuex": "^4.0.0"
   },
