--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@ionic/vue-router": "^5.4.0",
     "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
+    "he-tree-vue": "3",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
-    "vue-slicksort": "^2.0.0-alpha.4",
     "vue-template-compiler": "^2.6.12",
     "vuex": "^4.0.0"
   },
