--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "babel-runtime": "^6.26.0",
+    "chai": "^4.3.4",
     "core-js": "^3.6.5",
     "he-tree-vue": "3",
     "vue": "^3.0.0-0",
