timer and view update

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "vue-cli-service test:unit  ",
+    "test:watch": "vue-cli-service test:unit --watch",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
@@ -17,6 +18,7 @@
     "chai": "^4.3.4",
     "core-js": "^3.6.5",
     "he-tree-vue": "3",
+    "sinon": "^9.2.4",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
     "vue-template-compiler": "^2.6.12",
