--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-runtime": "^6.26.0",
     "chai": "^4.3.4",
     "core-js": "^3.6.5",
+    "dexie": "^3.0.3",
     "he-tree-vue": "3",
     "sinon": "^9.2.4",
     "vue": "^3.0.0-0",
