--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "samaya",
   "version": "0.0.1",
   "private": true,
+  "description": "Time based task management",
   "scripts": {
     "serve": "vue-cli-service serve",
+    "start": "vue-cli-service serve  --mode production --port 5000",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit  ",
-    "test:watch": "vue-cli-service test:unit --watch",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test:watch": "vue-cli-service test:unit --watch"
   },
   "dependencies": {
     "@capacitor/core": "2.4.6",
@@ -19,6 +21,7 @@
     "core-js": "^3.6.5",
     "dexie": "^3.0.3",
     "he-tree-vue": "3",
+    "register-service-worker": "^1.7.1",
     "sinon": "^9.2.4",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
@@ -30,6 +33,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -39,6 +43,5 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "typescript": "^4.2.2",
     "vue-jest": "^5.0.0-0"
-  },
-  "description": "Time based task management"
+  }
 }
